up some animations, fixed mobile scrollbar (triangle fix)

--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -70,10 +70,11 @@
     &--for7
       padding-left: 0
       #include-anim-7
-        margin-left: -20px
+        // margin-left: -20px
+        margin-left: 20px
         margin-right: -0px
-        max-width: 770px
-        transform: translate(20px,0px)
+        max-width: 750px
+        transform: translate(20px,40px)
     &--for8
       padding-left: 0
       #include-anim-8
