--- a/src/sass/components/_menu.sass
+++ b/src/sass/components/_menu.sass
@@ -178,6 +178,8 @@
     &__nav
       padding-left: 50px
       padding-right: 50px
+      &-triangle-fix
+        display: none
     &__sidebar
       max-width: 100%
       padding-left: 50px
